Fix Dark mode toggle change icon

--- a/client/src/components/home/Home.css
+++ b/client/src/components/home/Home.css
@@ -40,9 +40,3 @@ body {
     transform: scale(1.1) translateY(-5.5%);
     box-shadow: 0 4rem 8rem rgba(0, 204, 255, 0.3);
 }
-
-.notFound {
-    /* display: flex; */
-    /* justify-content: center; */
-    /* align-items: center; */
-}
