--- a/client/src/components/navBar/NavBar.module.css
+++ b/client/src/components/navBar/NavBar.module.css
@@ -134,11 +134,11 @@
     height: 40px;
     /* margin: 0px 0px 0px 0px;  */
     width: 40px;
-    color: white;
+    color: var(--text-color);
     text-decoration: none;
     font-family: "Montserrat", sans-serif;
-    border: 2px solid white;
-    background-color: #111D2B;
+    border: 2px solid var(--bg-color);
+    background-color: var(--bg-color);
     padding: 1px 1px 1px 1px;
     font-size: 16px;
     border-radius: 15px;
@@ -148,7 +148,7 @@
 
 .btnLightDark:hover {
     color: #00ccff;
-    background-color: #000000;
+    background-color: var(--bg-color);
     border: 2px solid #00ccff;
     cursor: pointer;
     transition-property: all;
